--- a/iMovieDb/Base.lproj/Main.storyboard
+++ b/iMovieDb/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
         <!--Movie Detail-->
         <scene sceneID="kjX-GP-lXN">
             <objects>
-                <viewController id="PnN-aG-VKM" sceneMemberID="viewController">
+                <viewController id="PnN-aG-VKM" customClass="MovieDetailViewController" customModule="iMovieDb" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LwN-gy-g5U"/>
                         <viewControllerLayoutGuide type="bottom" id="1w8-4E-6Af"/>
@@ -106,19 +106,19 @@
                                 <rect key="frame" x="20" y="104" width="125" height="163.5"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mak-IM-9wd">
-                                <rect key="frame" x="170" y="104" width="180" height="23"/>
+                                <rect key="frame" x="165" y="104" width="185" height="23"/>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="20"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VJD-KH-JXJ">
-                                <rect key="frame" x="170" y="142" width="180" height="21"/>
+                                <rect key="frame" x="165" y="142" width="185" height="21"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vote" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TwL-Wu-3c8">
-                                <rect key="frame" x="170" y="178" width="180" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TwL-Wu-3c8">
+                                <rect key="frame" x="165" y="178" width="185" height="21"/>
                                 <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -147,23 +147,31 @@
                             <constraint firstItem="VJD-KH-JXJ" firstAttribute="top" secondItem="Mak-IM-9wd" secondAttribute="bottom" constant="15" id="H9o-Ec-PHi"/>
                             <constraint firstAttribute="trailing" secondItem="VJD-KH-JXJ" secondAttribute="trailing" constant="25" id="Idx-E4-5iC"/>
                             <constraint firstItem="TwL-Wu-3c8" firstAttribute="top" secondItem="VJD-KH-JXJ" secondAttribute="bottom" constant="15" id="KQX-p5-ype"/>
-                            <constraint firstItem="VJD-KH-JXJ" firstAttribute="leading" secondItem="ULF-pz-fyi" secondAttribute="trailing" constant="25" id="OFg-no-Ras"/>
+                            <constraint firstItem="VJD-KH-JXJ" firstAttribute="leading" secondItem="ULF-pz-fyi" secondAttribute="trailing" constant="20" id="OFg-no-Ras"/>
                             <constraint firstItem="ULF-pz-fyi" firstAttribute="leading" secondItem="2i8-vH-Sks" secondAttribute="leading" constant="20" id="R89-gI-OOg"/>
                             <constraint firstItem="Mq1-xv-NAq" firstAttribute="leading" secondItem="2i8-vH-Sks" secondAttribute="leading" constant="20" id="Sil-6h-RU3"/>
-                            <constraint firstItem="Mak-IM-9wd" firstAttribute="leading" secondItem="ULF-pz-fyi" secondAttribute="trailing" constant="25" id="Vrm-3g-mR6"/>
+                            <constraint firstItem="Mak-IM-9wd" firstAttribute="leading" secondItem="ULF-pz-fyi" secondAttribute="trailing" constant="20" id="Vrm-3g-mR6"/>
                             <constraint firstItem="uy8-8h-cwH" firstAttribute="top" secondItem="Mq1-xv-NAq" secondAttribute="bottom" constant="25" id="XBG-CW-9eU"/>
                             <constraint firstItem="Mq1-xv-NAq" firstAttribute="top" secondItem="L6c-qC-Ec2" secondAttribute="bottom" constant="50" id="aIh-0p-gFl"/>
                             <constraint firstItem="ULF-pz-fyi" firstAttribute="top" secondItem="L6c-qC-Ec2" secondAttribute="top" constant="40" id="bG8-Oz-RT1"/>
                             <constraint firstAttribute="trailing" secondItem="Mq1-xv-NAq" secondAttribute="trailing" constant="20" id="dj9-3m-M5u"/>
                             <constraint firstAttribute="trailing" secondItem="uy8-8h-cwH" secondAttribute="trailing" constant="20" id="f2n-xX-qAf"/>
                             <constraint firstItem="L6c-qC-Ec2" firstAttribute="leading" secondItem="2i8-vH-Sks" secondAttribute="leading" id="gQw-ld-vlT"/>
-                            <constraint firstItem="TwL-Wu-3c8" firstAttribute="leading" secondItem="ULF-pz-fyi" secondAttribute="trailing" constant="25" id="hf1-6c-oOg"/>
+                            <constraint firstItem="TwL-Wu-3c8" firstAttribute="leading" secondItem="ULF-pz-fyi" secondAttribute="trailing" constant="20" id="hf1-6c-oOg"/>
                             <constraint firstItem="ULF-pz-fyi" firstAttribute="bottom" secondItem="L6c-qC-Ec2" secondAttribute="bottom" constant="-20" id="m0i-A8-LtP"/>
                             <constraint firstAttribute="trailing" secondItem="TwL-Wu-3c8" secondAttribute="trailing" constant="25" id="sEb-03-OI2"/>
                             <constraint firstAttribute="trailing" secondItem="L6c-qC-Ec2" secondAttribute="trailing" id="twm-sc-8a4"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Movie Detail" id="cRU-Jm-U4k"/>
+                    <connections>
+                        <outlet property="backdropImage" destination="L6c-qC-Ec2" id="rky-cj-0oh"/>
+                        <outlet property="dateLabel" destination="VJD-KH-JXJ" id="6Jw-My-w0U"/>
+                        <outlet property="overviewLabel" destination="uy8-8h-cwH" id="YwH-R4-xz7"/>
+                        <outlet property="posterImage" destination="ULF-pz-fyi" id="FEj-9C-v8G"/>
+                        <outlet property="ratingLabel" destination="TwL-Wu-3c8" id="KZT-fa-Rh6"/>
+                        <outlet property="titleLabel" destination="Mak-IM-9wd" id="Hpz-oV-YDZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vZq-r5-gkW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
